@@ -46,6 +46,8 @@ extern "C"
     extern int PlayVideo(const uint8_t *, int);
     /// C plugin play TS video packet
     extern void PlayTsVideo(const uint8_t *, int);
+    /// C plugin grab an image
+    extern uint8_t *GrabImage(int *, int, int, int, int);
 
     /// C plugin set play mode
     extern void SetPlayMode(void);
